data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3808.wast
;; 7. **Test with Maximum Valid Function Index**:    - **Description**: Utilize the highest possible valid index for the `br_table` instruction to ensure it doesn't perform out-of-bounds access.    - **Constraint Checked**: Function index validity.    - **Edge Case Relation**: Ensures correct handling at the boundary of valid function indices.

(assert_invalid
  (module
    (func $type-max-func-index (call 1))
    (func)
  )
  "function index out of bounds"
)